--- a/www/custom.css
+++ b/www/custom.css
@@ -1,8 +1,31 @@
+/* Override the main window padding to be smaller to save space on each tab */
+:root {
+    --bslib-spacer: 0.5rem !important;
+}
+
+/* This is an alternative to using js disable. Makes a numeric output look like a disabled form. */
+.form-control-disabled {
+    /* background-color: #d8fefe;   */
+    /* color: #6c757d;  A muted text color */
+    cursor: not-allowed;  /* Change cursor to indicate non-interactive */
+    opacity: 0.85;  
+    pointer-events: none;  /* Disable all pointer events */
+}
+
 /* Common callout styles */
 .callout {
-    padding: 1rem;
+    padding: 0.7rem;
     border-radius: 0.375rem;
     margin-bottom: 1rem;
+    border-width: 1px;
+    border-style: solid;
+}
+
+/* For inside another callout, smaller margins, etc */
+.callout-inner {
+    padding: 0.5rem;
+    border-radius: 0.375rem;
+    /* margin-bottom: 1rem; */
     border-width: 1px;
     border-style: solid;
 }
@@ -10,6 +33,12 @@
 .callout-title {
     font-weight: bold;
     font-size: 1.2em;
+    margin-bottom: 0.5rem;
+}
+
+.callout-title2-black {
+    font-weight: bold;
+    color: black;
     margin-bottom: 0.5rem;
 }
 
@@ -47,3 +76,4 @@
     border-color: #f5c2c7;
     color: #842029;
 }
+
